centering navbar items verically, wrapping logo by link tag, using button to wrap the text, making navbar position fix, using cursor, putting link tags for the articles to wrap the image and the title, fix the footer and remove overlap on the footer

--- a/css/style.css
+++ b/css/style.css
@@ -4,39 +4,39 @@ html body {
 }
 
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  border-bottom: 2px solid #e2e2e2;
+  text-align: center;
+  padding-top: 20px;
+  position: fixed;
+  top: 0px;
+  left: 5px;
+  z-index: 9999;
   width: 100%;
   margin: 0 auto;
-  display: flex;
-}
-
-.lines {
-  width: 18px;
-  height: 19px;
-}
-
-.bordBott {
-  border-bottom: 1px solid #e2e2e2;
 }
 
 .leftcorner {
   display: flex;
+  
+}
+
+.rightcorner {
+  display: flex;
+  font-size: 14px;
+  background-color: white;
+  border: none;
+}
+.gap{
   gap: 10px;
-  position: absolute;
-  left: 10px;
-}
-
-.center {
-  margin: 6px auto 0;
-}
-
-.space {
-  margin-top: 2px;
 }
 
 .nyt {
   font-size: 16px;
   line-height: 16px;
-  text-align: center;
+  text-align: left;
 }
 
 a {
@@ -44,31 +44,23 @@ a {
   color: black;
 }
 
-.rightcorner {
-  display: flex;
-  font-size: 11px;
-  justify-content: space-around;
-  position: absolute;
-  right: 10px;
-}
-
 .sbscrb {
   background-color: rgb(50, 104, 145);
   border: 1px solid rgb(50, 104, 145);
-  border-radius: 3px;
-  color: white;
-  font-size: 11px;
-  line-height: 11px;
-  font-weight: 700;
-  padding: 10px;
+  color: white; 
 }
-
-.account {
+.buttonCommonProperties{
+  padding: 10px;
   font-size: 12px;
   font-weight: 500;
-  background-color: white;
-  border: 0;
+  height: 10px; 
 }
+.account {
+  background-color: white;
+  border: none;
+  font-size: 14px;
+}
+.pointer {cursor: pointer;}
 
 .grid1 {
   display: grid;
@@ -88,6 +80,7 @@ a {
   max-width: 600px;
   color: #121212;
   margin: 20px auto;
+  text-align: left;
 }
 
 .pictureSpace p {
@@ -342,7 +335,7 @@ a {
 .grid6 {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: repeat(6, 190px);
+  grid-template-rows: repeat(6, auto);
   margin-right: 5%;
   margin-left: 3%;
   column-gap: 20px;
@@ -354,9 +347,10 @@ a {
 }
 
 .cont h5 {
-  margin: 0 0 2px 75px;
+  margin: 0 0 10px 5px;
   color: rgb(102, 102, 102);
   font-size: 12px;
+  text-align: end;
 }
 
 .borderTopMargins {
@@ -378,14 +372,6 @@ a {
   grid-row: 1;
 }
 
-.wrp2 {
-  grid-row: 3;
-}
-
-.wrp3 {
-  grid-row: 5;
-}
-
 .wrpMargins {
   grid-column: 1;
   display: flex;
@@ -393,7 +379,11 @@ a {
   gap: 20px;
   padding-right: 50px;
 }
-
+.wrp2{
+  grid-column: 1;
+  grid-row: 1;
+  margin-top: 40%;
+}
 .wrp2 h6 {
   margin-top: 0;
   color: #666;
@@ -405,21 +395,28 @@ a {
   max-width: 100%;
   margin: 25px auto;
 }
-
 .editorsPicks {
   margin-top: 80px;
-  grid-column: 1;
-  grid-row: 4;
 }
-
+.wrp3{
+  grid-column: 1;
+  grid-row: 1;
+  margin-top: 70%;
+  display: block;
+}
 .wrp3 h6 {
   margin-top: 0;
   color: #666;
 }
-
-.wrp4 {
+.wrapArticle{
+  display: flex;
+  gap: 20px;
+}
+section{
   grid-column: 2;
   grid-row: 1;
+}
+.wrp4 {
   font-weight: 100;
   margin: 0 10px;
   font-size: 1.125rem;
@@ -447,7 +444,7 @@ a {
 .navLogo {
   grid-column: 1 /-1;
   grid-row: 1;
-  height: 50px;
+  
 }
 
 footer {
@@ -481,7 +478,6 @@ footer {
 .homepage {
   color: rgb(86, 123, 149);
   font-size: 11px;
-  font-style: normal;
   font-weight: 400;
   line-height: 11px;
 }
@@ -490,6 +486,7 @@ footer {
   grid-column: 1 / -1;
   grid-row: 2;
   display: flex;
+  gap: 30px;
 }
 
 .list {
@@ -509,6 +506,7 @@ ul {
 
 .border-left {
   border-left: 1px solid #e2e2e2;
+  margin-left: 10%;
 }
 
 .border-bottom {
@@ -524,7 +522,7 @@ ul {
 .col1 {
   margin-left: 1%;
   list-style: none;
-  gap: 3px;
+  
 }
 
 .col1 h4 {
@@ -537,11 +535,12 @@ ul {
 }
 
 .col1 li {
-  width: 150px;
   font-size: 14px;
   font-weight: 500;
   height: 23px;
-  line-height: 16px;
+}
+li a{
+  line-height: 1.5;
 }
 
 .imgText1 {
